# anime-sama-api

./: README.md  pyproject.toml
src/anime_sama_api/: __init__.py  catalogue.py  episode.py  langs.py  season.py  top_level.py  utils.py
