[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/anime_sama_api"]

[project]
name = "anime-sama-api"
version = "1.0.0"
description = "API Python pour le catalogue et les épisodes Anime-Sama (anime-sama.to) — réutilisable pour CLI, site de streaming, etc."
readme = "README.md"
license = "GPL-3.0-or-later"
keywords = ["anime-sama", "anime", "api", "streaming", "vf", "vostfr"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.1",
]

[project.urls]
Repository = "https://github.com/CheikhNaro/anime-sama-cli/"
Documentation = "https://github.com/CheikhNaro/anime-sama-cli#readme"
